--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Programming Hero Projects Repo</title>
+  <title>My First GitHub Repo</title>
 </head>
 <body>
   
