--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My First GitHub Repo</title>
+  <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-  
+ <div>
+   <h1>Welcome to My First Website</h1>
+   <p>This is a simple HTML document to showcase my project.</p>
+    <p>Feel free to explore and learn more about my work!</p>
+
+ </div> 
 </body>
 </html>
