added the about me and the contact me

--- a/index.html
+++ b/index.html
@@ -13,5 +13,14 @@
     <p>Feel free to explore and learn more about my work!</p>
 
  </div> 
+ <div>
+   <h2>About Me</h2>
+   <p>I'm a passionate web developer with a love for creating interactive and user-friendly websites.</p>
+   <p>In this project, I'm showcasing my skills in HTML, CSS, and JavaScript.</p>
+ </div>
+ <div>
+   <h2>Contact Me</h2>
+   <p>If you'd like to get in touch, feel free to reach out!</p>
+ </div>
 </body>
 </html>
