--- a/index.html
+++ b/index.html
@@ -22,5 +22,15 @@
    <h2>Contact Me</h2>
    <p>If you'd like to get in touch, feel free to reach out!</p>
  </div>
+ <div>
+  <h3>You to push incremental code</h3>
+  <ul>
+    <li>git add .</li>
+    <li>git commit -m "Your commit message"</li>
+    <li>git push</li>
+    
+
+  </ul>
+ </div>
 </body>
 </html>
