--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
     <li>git add .</li>
     <li>git commit -m "Your commit message"</li>
     <li>git push</li>
-    
 
-  </ul>
+ </ul>
+ </div>
+ <div>
+  <h3>Shirt</h3>
+  <p>Shirt is a clothing item that covers the upper body, typically with sleeves
+    and a collar. It can be made from various fabrics and comes in different styles, such as dress shirts, casual shirts, and t-shirts.</p>
+    <img src="6a01e90b6c7e5f4d8d5f41f7352fea58.jpg_720x720q80.jpg" alt="Shirt">
  </div>
 </body>
 </html>
